MMCPA-2323: Fixing product labels on basket page on tablet and mobile screens.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/cart/_basket.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/cart/_basket.scss
@@ -764,6 +764,16 @@
       }
     }
 
+    .owl-carousel .owl-item {
+      .labels-container {
+        @include breakpoint($upto-desktop) {
+          img {
+            min-height: auto;
+          }
+        }
+      }
+    }
+
     .c-products__item__label {
       @include breakpoint($desktop) {
         margin-bottom: 0.875rem;
